unpackaged/objects/Azure_DevOps_Information__mdt.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Url__c</fullName>
        <label>Base Url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_Name__c</fullName>
        <label>Case Record Type Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Azure DevOps Information</label>
    <pluralLabel>Azure DevOps Information</pluralLabel>
</CustomObject>